<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fMyPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:src="@drawable/ic_center_location"
        app:backgroundTint="@color/light_purple_for_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fStartStop"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@drawable/ic_start"
        app:backgroundTint="@color/light_purple_for_buttons"
        app:layout_constraintBottom_toTopOf="@+id/fMyPosition"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="#4DFFFFFF"
        android:elevation="0dp"
        app:cardBackgroundColor="@null"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/amiko_semibold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/time_patern"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/amiko_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:text="@string/speed_patern"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAverageSpeed"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/amiko_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:text="@string/averag_speed_patern"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/amiko_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/distance_patern"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>